# OpenCIM

./: .gitignore  CMakeLists.txt  README.md
3rdlibs/include/: squish_export.h
3rdlibs/include/LibCIMModel/: CIMDataSetImpl.cpp  CIMHeader.hpp  ICIMSchema.hpp  libCIMModel.cpp
3rdlibs/include/LibCIMModel/Common/: Define.hpp
3rdlibs/include/LibCIMModel/Component/: Property.cpp  Semantics.hpp  SpatialLocation.cpp  SpatialLocation.hpp  SpatialSystem.hpp  TemporalPoint.cpp  TemporalSystem.cpp  TemporalSystem.hpp
3rdlibs/include/LibCIMModel/Core/: Concept.hpp
3rdlibs/include/LibCIMModel/Entity/: Entity.cpp  Entity.hpp
3rdlibs/include/LibCIMModel/System/: Evolution.cpp  Relation.cpp
3rdlibs/include/osg/: Array  Billboard  GL  Plane  Uniform  Vec2i  Vec2ui  Vec3i  Vec3ui  Vec4i  Vec4ui
3rdlibs/include/osgEarthCesium/: PrepareRenderResources.cpp
3rdlibs/lib/debug/: OpenThreadsd.lib  osgDBd.lib  osgGAd.lib  osgQOpenGLd.lib  osgViewerd.lib  osgd.lib  proj_4_9_d.lib
3rdlibs/lib/release/: osgAnimation.lib  osgEarthCesium.lib  osgFX.lib  osgManipulator.lib  osgParticle.lib  osgPresentation.lib  osgShadow.lib  osgSim.lib  osgTerrain.lib  osgText.lib  osgUI.lib  osgUtil.lib  osgVolume.lib  osgWidget.lib
3rdlibs/lib/release/pkgconfig/: openscenegraph-osg.pc  openscenegraph-osgAnimation.pc  openscenegraph-osgDB.pc  openscenegraph-osgFX.pc  openscenegraph-osgGA.pc  openscenegraph-osgManipulator.pc  openscenegraph-osgParticle.pc  openscenegraph-osgShadow.pc  openscenegraph-osgSim.pc  openscenegraph-osgTerrain.pc  openscenegraph-osgText.pc  openscenegraph-osgUtil.pc  openscenegraph-osgViewer.pc  openscenegraph-osgVolume.pc  openscenegraph-osgWidget.pc  openscenegraph.pc  openthreads.pc
3rdlibs/nlohmann/: json.hpp  ordered_map.hpp
3rdlibs/nlohmann/detail/: abi_macros.hpp  exceptions.hpp  json_custom_base_class.hpp  json_pointer.hpp  value_t.hpp
3rdlibs/nlohmann/detail/conversions/: to_chars.hpp
3rdlibs/nlohmann/detail/input/: binary_reader.hpp  lexer.hpp
3rdlibs/nlohmann/detail/iterators/: iter_impl.hpp  json_reverse_iterator.hpp
3rdlibs/nlohmann/detail/meta/: cpp_future.hpp  type_traits.hpp
3rdlibs/nlohmann/detail/output/: binary_writer.hpp  serializer.hpp
3rdlibs/vtk/include/: QVTKGraphicsItem.h  vtk3DWidget.h  vtkAbstractContextBufferId.h  vtkAbstractContextItem.h  vtkAbstractWidget.h  vtkActor.h  vtkAffineRepresentation.h  vtkAffineWidget.h  vtkAngleWidget.h  vtkAnimationCue.h  vtkAnimationScene.h  vtkAnnotatedCubeActor.h  vtkAxesActor.h  vtkAxesTransformWidget.h  vtkAxis.h  vtkBalloonWidget.h  vtkBiDimensionalWidget.h  vtkBlockItem.h  vtkBorderRepresentation.h  vtkBorderWidget.h  vtkBoxWidget2.h  vtkBrokenLineWidget.h  vtkButtonRepresentation.h  vtkButtonWidget.h  vtkCamera.h  vtkCameraWidget.h  vtkCaptionActor2D.h  vtkCaptionRepresentation.h  vtkCaptionWidget.h  vtkCellCentersPointPlacer.h  vtkCellPicker.h  vtkCenteredSliderWidget.h  vtkChart.h  vtkChartBox.h  vtkChartHistogram2D.h  vtkChartLegend.h  vtkChartMatrix.h  vtkChartParallelCoordinates.h  vtkChartPie.h  vtkChartXY.h  (+147 more)
3rdlibs/vtk/include/vtkmetaio/: metaScene.h
3rdlibs/vtk/lib/debug/: vtkChartsCore-8.2.lib  vtkCommonComputationalGeometry-8.2.lib  vtkCommonCore-8.2.lib  vtkCommonDataModel-8.2.lib  (+65 more)
ACIMCreator/: CMakeLists.txt
ACIMCreator/Code/: CIMStandard.cpp  CMakeLists.txt  NNU-ACIM.cpp
ACIMCreator/Code/Mechanism/: TestPlugin.cpp
ACIMCreator/GUI/: CMakeLists.txt
ACIMTest/: CIMDataSet.cpp  CIMSchema.cpp  CIMSynthetic.cpp  CMakeLists.txt  main.cpp
ACIMTest/Mechanism/: TestPlugin.cpp
ACIMTest/Mechanism/Plugin/: HelloMechanism.cpp
ACIMViewer/: CMakeLists.txt
ACIMViewer-Lite/: CMakeLists.txt  main.cpp
ACIMViewer-Lite/CIMDataSet-test/: BasicInfo.CIM
ACIMViewer-Lite/CIMDataSet-test/SyntheticModel/CIM3/: CIM3.json
ACIMViewer-Lite/CIMDataSet-test/SyntheticModel/CIM3/ExternalData/building/household/: CIM3dormitory_household.ifc
ACIMViewer-Lite/CIMDataSet-test/SyntheticModel/CIM6/: CIM6.json
ACIMViewer-Lite/Tool/: OSGBTool.cpp  OSGBTool.hpp
ACIMViewer-Lite/View/: MainWindow.cpp  MainWindow.hpp  ModelWidget.cpp  ModelWidget.hpp
ACIMViewer-Lite/ViewModel/: MainWindowViewModel.cpp  MainWindowViewModel.hpp
ACIMViewer-Lite/temp/: CIM3dormitory_household.mtl
ACIMViewer/3DViewer/: CMakeLists.txt  main.cpp
ACIMViewer/3DViewer/Renders/: CIMOBJRender.cpp  CIMOBJRender.hpp
ACIMViewer/CPSViewer/: CMakeLists.txt  main.cpp
ACIMViewer/CPSViewer/ImGui/: imgui.h  imgui_impl_opengl3_loader.h
ACIMViewer/CPSViewer/View/: PSTab.cpp  PSTree.cpp
ACIMViewer/CPSViewer/ViewModel/: CPSTabControlViewModel.h  MainWidgetViewModel.h  TreeViewModel.h
CIMCreator/: CIMStandard.cpp  CMakeLists.txt  NNU-ACIM.cpp  main.cpp
CIMCreator/Mechanism/Plugin/: HelloMechanism.cpp
CIMViewer/: CMakeLists.txt
CIMViewer/3DViewer/: CMakeLists.txt
CIMViewer/3DViewer/Renders/: CIMOBJRender.cpp
CIMViewer/CPSViewer/: CMakeLists.txt
CIMViewer/CPSViewer/Model/: CombItem.h  Tree.h
CIMViewer/CPSViewer/View/: CPSTabControl.cpp  CSTab.cpp  CSTree.cpp  MainWidget.cpp
CIMViewer/CPSViewer/ViewModel/: MainWidgetViewModel.h
Data/NNU-ACIM/: CIMStandard.json  NNU-ACIM.json
LibCIMModel/: CIMContentImpl.cpp  CIMContentImpl.hpp  CIMDataSetImpl.cpp  CIMHeader.cpp  CIMHeader.hpp  CIMSchemaImpl.cpp  CIMStandardImpl.cpp  CIMStandardImpl.hpp  CIMSyntheticImpl.cpp  CIMSyntheticImpl.hpp  CMakeLists.txt  ICIMContent.hpp  ICIMStandard.hpp  ICIMSynthetic.hpp  libCIMModel.cpp
LibCIMModel/Common/: Date.cpp  Date.hpp  ExternalData.cpp  ExternalData.hpp  IPlugin.hpp  UniqueID.cpp  UniqueID.hpp
LibCIMModel/Component/: Component.hpp  Property.hpp  Semantics.cpp  Semantics.hpp  SpatialGeometry.cpp  SpatialGeometry.hpp  SpatialLocation.hpp  SpatialSystem.cpp  SpatialSystem.hpp  TemporalPoint.hpp  TemporalRange.cpp  TemporalRange.hpp  TemporalSystem.hpp
LibCIMModel/Core/: Axiom.cpp  Axiom.hpp  Concept.cpp  Concept.hpp  Element.hpp
LibCIMModel/Entity/: Entity.cpp  Entity.hpp
LibCIMModel/System/: Evolution.hpp  Mechanism.cpp  Mechanism.hpp  Relation.cpp  Relation.hpp  System.hpp
SchemaConvert/: CMakeLists.txt  main.cpp
(+145 files in other folders)
